Ajuste serviceImp - converts