@@ -1,49 +1,29 @@
 package com.zse.FinIOAPI.service.imp;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.zse.FinIOAPI.entity.PagamentoExtra;
 import com.zse.FinIOAPI.entity.dto.PagamentoExtraDTO;
 import com.zse.FinIOAPI.repository.PagamentoExtraRepository;
 import com.zse.FinIOAPI.service.PagamentoExtraService;
+import com.zse.FinIOAPI.service.convert.PagamentoExtraConvert;
 
 @Service
 public class PagamentoExtraIml implements PagamentoExtraService {
 
-    @Autowired
-    private PagamentoExtraRepository repository;
-
-    private PagamentoExtraDTO toDTO(PagamentoExtra entity) {
-        return PagamentoExtraDTO.builder()
-                .id(entity.getId())
-                .idEmpresa(entity.getIdEmpresa())
-                .descricao(entity.getDescricao())
-                .valor(entity.getValor())
-                .dataPagamento(entity.getDataPagamento())
-                .idClassificacao(entity.getIdClassificacao())
-                .observacao(entity.getObservacao())
-                .build();
-    }
-
-    private PagamentoExtra toEntity(PagamentoExtraDTO dto) {
-        return PagamentoExtra.builder()
-                .id(dto.getId())
-                .idEmpresa(dto.getIdEmpresa())
-                .descricao(dto.getDescricao())
-                .valor(dto.getValor())
-                .dataPagamento(dto.getDataPagamento())
-                .idClassificacao(dto.getIdClassificacao())
-                .observacao(dto.getObservacao())
-                .build();
-    }
+	private final PagamentoExtraRepository repository;
+	private final PagamentoExtraConvert convert;
+	
+	public PagamentoExtraIml(PagamentoExtraRepository repository, PagamentoExtraConvert convert ) {		
+		this.repository = repository;
+		this.convert = convert;
+	}
 
     @Override
     public PagamentoExtraDTO salvar(PagamentoExtraDTO dto) {
-        return toDTO(repository.save(toEntity(dto)));
+        return convert.convertEntityParaDto(repository.save(convert.convertDtoParaEntity(dto)));
     }
 
     @Override
@@ -57,7 +37,7 @@ public class PagamentoExtraIml implements PagamentoExtraService {
         existente.setIdClassificacao(dto.getIdClassificacao());
         existente.setObservacao(dto.getObservacao());
 
-        return toDTO(repository.save(existente));
+        return convert.convertEntityParaDto(repository.save(existente));
     }
 
     @Override
@@ -67,16 +47,13 @@ public class PagamentoExtraIml implements PagamentoExtraService {
 
     @Override
     public PagamentoExtraDTO buscarPorId(Long id) {
-        return repository.findById(id)
-                .map(this::toDTO)
-                .orElseThrow(() -> new RuntimeException("Pagamento extra não encontrado"));
+        
+    	PagamentoExtra pagamentoExtra = repository.findById(id).orElseThrow(); 	
+    	return convert.convertEntityParaDto(pagamentoExtra);
     }
 
     @Override
     public List<PagamentoExtraDTO> listarTodos() {
-        return repository.findAll()
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+        return repository.findAll().stream().map(convert::convertEntityParaDto).toList(); 
     }
 }
