@@ -1,55 +1,43 @@
 package com.zse.FinIOAPI.service.imp;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import com.zse.FinIOAPI.entity.Saida;
+import com.zse.FinIOAPI.entity.ParcelaSaida;
 import com.zse.FinIOAPI.entity.dto.ParcelaSaidaDTO;
 import com.zse.FinIOAPI.repository.ParcelaSaidaRepository;
 import com.zse.FinIOAPI.service.ParcelaSaidaService;
+import com.zse.FinIOAPI.service.convert.ParcelaSaidaConvert;
 
 @Service
 public class ParcelaSaidaImp implements ParcelaSaidaService {
 
-    @Autowired
-    private ParcelaSaidaRepository repository;
-
-    private ParcelaSaidaDTO toDTO(Saida entity) {
-        return ParcelaSaidaDTO.builder()
-                .id(entity.getId())
-                .valor(entity.getValorParcela())
-                .dataPagamento(entity.getDataPagamento())
-                .observacao(entity.getObservacao())
-                .build();
-    }
-
-    private Saida toEntity(ParcelaSaidaDTO dto) {
-        return Saida.builder()
-                .id(dto.getId())
-                .valorParcela(dto.getValor())
-                .dataPagamento(dto.getDataPagamento())
-                .observacao(dto.getObservacao())
-                .build();
-    }
+	private final ParcelaSaidaRepository repository;
+	private final ParcelaSaidaConvert convert;
+	
+	public ParcelaSaidaImp(ParcelaSaidaRepository repository, ParcelaSaidaConvert convert) {
+		this.repository = repository;
+		this.convert = convert;
+	}
 
     @Override
     public ParcelaSaidaDTO salvar(ParcelaSaidaDTO dto) {
-        return toDTO(repository.save(toEntity(dto)));
+        return convert.convertEntityParaDto(repository.save(convert.convertDtoParaEntity(dto)));
     }
+      
 
     @Override
     public ParcelaSaidaDTO atualizar(Long id, ParcelaSaidaDTO dto) {
-        Saida existente = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Saída não encontrada"));
+    	ParcelaSaida existente = repository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Parcela Saída não encontrada"));
 
-        existente.setValorParcela(dto.getValor());
+        existente.setNumeroParcela(dto.getNumeroParcela());
+        existente.setValor(dto.getValor());
+        existente.setDataVencimento(dto.getDataVencimento());
         existente.setDataPagamento(dto.getDataPagamento());
-        existente.setObservacao(dto.getObservacao());
 
-        return toDTO(repository.save(existente));
+        return convert.convertEntityParaDto(repository.save(existente));
     }
 
     @Override
@@ -59,16 +47,13 @@ public class ParcelaSaidaImp implements ParcelaSaidaService {
 
     @Override
     public ParcelaSaidaDTO buscarPorId(Long id) {
-        return repository.findById(id)
-                .map(this::toDTO)
-                .orElseThrow(() -> new RuntimeException("Saída não encontrada"));
+    	ParcelaSaida ParcelaSaida = repository.findById(id).orElseThrow();
+    	
+    	return convert.convertEntityParaDto(ParcelaSaida);
     }
 
     @Override
     public List<ParcelaSaidaDTO> listarTodos() {
-        return repository.findAll()
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
-    }
+    	return repository.findAll().stream().map(convert::convertEntityParaDto).toList(); 
+}
 }
