@@ -1,57 +1,30 @@
 package com.zse.FinIOAPI.service.imp;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.zse.FinIOAPI.entity.Saida;
 import com.zse.FinIOAPI.entity.dto.SaidaDTO;
 import com.zse.FinIOAPI.repository.SaidaRepository;
 import com.zse.FinIOAPI.service.SaidaService;
+import com.zse.FinIOAPI.service.convert.SaidaConvert;
 
 @Service
 public class SaidaImp implements SaidaService {
 
-    @Autowired
-    private SaidaRepository repository;
+ private final SaidaRepository repository;
+ private final SaidaConvert convert; 
+ 
+ public SaidaImp(SaidaRepository repository, SaidaConvert convert) {
+	 this.repository  = repository;
+	 this.convert = convert;
+ }
 
-    private SaidaDTO toDTO(Saida entity) {
-        return SaidaDTO.builder()
-                .id(entity.getId())
-                .idEmpresa(entity.getIdEmpresa())
-                .descricao(entity.getDescricao())
-                .valorTotal(entity.getValorTotal())
-                .valorParcela(entity.getValorParcela())
-                .quantidadeParcelas(entity.getQuantidadeParcelas())
-                .dataCompra(entity.getDataCompra())
-                .dataCadastro(entity.getDataCadastro())
-                .dataPagamento(entity.getDataPagamento())
-                .idClassificacao(entity.getIdClassificacao())
-                .observacao(entity.getObservacao())
-                .build();
-    }
-
-    private Saida toEntity(SaidaDTO dto) {
-        return Saida.builder()
-                .id(dto.getId())
-                .idEmpresa(dto.getIdEmpresa())
-                .descricao(dto.getDescricao())
-                .valorTotal(dto.getValorTotal())
-                .valorParcela(dto.getValorParcela())
-                .quantidadeParcelas(dto.getQuantidadeParcelas())
-                .dataCompra(dto.getDataCompra())
-                .dataCadastro(dto.getDataCadastro())
-                .dataPagamento(dto.getDataPagamento())
-                .idClassificacao(dto.getIdClassificacao())
-                .observacao(dto.getObservacao())
-                .build();
-    }
 
     @Override
     public SaidaDTO salvar(SaidaDTO dto) {
-        return toDTO(repository.save(toEntity(dto)));
+        return convert.convertEntityParaDto(repository.save(convert.convertDtoParaEntity(dto)));
     }
 
     @Override
@@ -70,7 +43,7 @@ public class SaidaImp implements SaidaService {
         existente.setIdClassificacao(dto.getIdClassificacao());
         existente.setObservacao(dto.getObservacao());
 
-        return toDTO(repository.save(existente));
+        return convert.convertEntityParaDto(repository.save(existente));
     }
 
     @Override
@@ -80,16 +53,13 @@ public class SaidaImp implements SaidaService {
 
     @Override
     public SaidaDTO buscarPorId(Long id) {
-        return repository.findById(id)
-                .map(this::toDTO)
-                .orElseThrow(() -> new RuntimeException("Saída não encontrada"));
+    	 Saida existente = repository.findById(id).orElseThrow();
+    	
+    	return convert.convertEntityParaDto(existente);
     }
 
     @Override
     public List<SaidaDTO> listarTodos() {
-        return repository.findAll()
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+    	return repository.findAll().stream().map(convert::convertEntityParaDto).toList(); 
     }
 }
